assets/css/styles.css
span.sr-only {
    position: absolute!important;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
}
ul:has(.menu-item-flex){
	padding:0;
	margin:0;
	margin-block:4px;
}

.menu-item-flex {
    display: grid;
   grid-template-columns:1fr 28px;
    align-items: center; 
	margin-block-end:4px;
	& a{
		padding-inline:4px;
	}
}
.quicklinks #wp-admin-bar-wpcodebox-link .menu-item-flex {

	& a{
    padding-inline-start: 0 !important;
}
	& .icon-link{
		padding-inline-start: 10px;
	}
}
.icon-link{
	opacity:.65;
	position:relative!important;
	isolation:isolate;
}
.icon-link::before {
	content:"";
	position:absolute!important;
	height:100%;
	left:2px;
	width:1px;
	background:linear-gradient(transparent 20%, #ffffff 20%, #ffffff 80%,transparent 80%);
	opacity:.6;
}
.icon-link:hover,.icon-link:hover::before {
	opacity:1;
}
/* Styles for the new window link icon */


.icon-link{
  display:flex;
  align-items:center;
  justify-content:start;

  & a {
     content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path fill="%23ffffff" d="M384 64C366.3 64 352 78.3 352 96C352 113.7 366.3 128 384 128L466.7 128L265.3 329.4C252.8 341.9 252.8 362.2 265.3 374.7C277.8 387.2 298.1 387.2 310.6 374.7L512 173.3L512 256C512 273.7 526.3 288 544 288C561.7 288 576 273.7 576 256L576 96C576 78.3 561.7 64 544 64L384 64zM144 160C99.8 160 64 195.8 64 240L64 496C64 540.2 99.8 576 144 576L400 576C444.2 576 480 540.2 480 496L480 416C480 398.3 465.7 384 448 384C430.3 384 416 398.3 416 416L416 496C416 504.8 408.8 512 400 512L144 512C135.2 512 128 504.8 128 496L128 240C128 231.2 135.2 224 144 224L224 224C241.7 224 256 209.7 256 192C256 174.3 241.7 160 224 160L144 160z"/></svg>');
   min-height:16px;
    min-width:16px;
	  margin-inline-start:5px;
  }
}

